codegen/ui_tests/rhai_fn_global_multiple.stderr
error: namespace is already set to 'global'
  --> ui_tests/rhai_fn_global_multiple.rs:12:23
   |
12 |     #[rhai_fn(global, internal)]
   |                       ^^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_module`
  --> ui_tests/rhai_fn_global_multiple.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of unresolved module or unlinked crate `test_module`
   |
   = help: if you wanted to use a crate named `test_module`, use `cargo add test_module` to add it to your `Cargo.toml`
